# mc68000

./: .gitignore  CMakeLists.txt  References.md
os/: build.sh  kernel.s  rom.s
os/tools/: mkdisk.c
src/: main.c
src/assembler/: assembler.c  assembler.h  directives.c  directives.h  encoder.c  encoder.h  lexer.c  lexer.h  macros.c  macros.h  output.c  output.h  parser.c  parser.h  symbols.c  symbols.h
src/bus/: bus.c  bus.h  memory.c  memory.h
src/common/: buffer.c  buffer.h  error.c  error.h  log.c  log.h  types.h
src/compiler/: compiler.c  compiler.h
src/compiler/backend/: codegen.c  codegen.h  registers.c  registers.h
src/compiler/frontend/: ast.c  ast.h  cc_lexer.c  cc_lexer.h  cc_parser.c  cc_parser.h  cc_types.c  cc_types.h  semantics.c  semantics.h
src/compiler/middle/: ir.c  ir.h  optimizer.c  optimizer.h
src/cpu/: addressing.c  addressing.h  alu.c  alu.h  cpu.c  cpu.h  decoder.c  decoder.h  exceptions.c  exceptions.h  opcodes.c  opcodes.h  timing.c  timing.h
src/cpu/instructions/: arithmetic.c  bcd.c  bit.c  branch.c  instructions.h  logic.c  move.c  shift.c  system.c
src/devices/: audio.c  audio.h  device.h  network.c  network.h  parallel.c  parallel.h  pic.c  pic.h  rtc.c  rtc.h  storage.c  storage.h  timer.c  timer.h  uart.c  uart.h  video.c  video.h
src/disassembler/: disassembler.c  disassembler.h
src/gui/: gui.h  gui_linux.c  gui_macos.m  gui_win32.c
src/machine/: machine.c  machine.h
src/tools/: assembler_main.c  compiler_main.c  disassembler_main.c
tests/: CMakeLists.txt  test_assembler.c  test_cpu.c  test_disassembler.c  test_framework.h
